--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./style/main.css" type="text/css">
     <title>Tetris</title>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-117992050-4"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N24S1J89NE"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
 
-      gtag('config', 'UA-117992050-4');
+      gtag('config', 'G-N24S1J89NE');
     </script>
   </head>
   <body>
