add link for 'Li Enze'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <!-- <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui"> -->
     <link rel="stylesheet" href="./style/main.css" type="text/css">
     <title>Tetris</title>
-
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N24S1J89NE"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -49,9 +48,10 @@
         <div class="btn drop-btn">Drop (space bar)</div>
         <div class="btn deform-btn">Deform (up arrow)</div>
       </div>
-      <p>Developed by Li Enze.</p>
+      <p>
+        Developed by <a href="https://github.com/enzeberg" target="_blank" rel="noreferrer">Li Enze</a>
+      </p>
     </div>
-
     <script src="./js/vector.js"></script>  
     <script src="./js/square.js"></script>
     <script src="./js/block.js"></script>
@@ -59,7 +59,6 @@
     <script src="./js/local_storage_manager.js"></script>
     <script src="./js/ui_manager.js"></script>
     <script src="./js/game.js"></script>
-    
     <script>
       (function(){
         var cv = document.querySelector('canvas#game');
